--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "ciri auth callback",
   "main": "index.js",
   "scripts": {
+    "build:up": "browserify src/app.js --node -u pg-native -u encoding -t babelify > server.js ",
     "dev": "nodemon -r dotenv/config index.js"
   },
   "author": "Jeff Lai",
@@ -18,6 +19,8 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-register": "^6.26.0",
+    "babelify": "^8.0.0",
+    "browserify": "^16.2.2",
     "dotenv": "^6.0.0",
     "nodemon": "^1.17.5",
     "prettier": "^1.13.5"
